# coastlines

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
coastlines/: __init__.py  __main__.py  _gshhg.py  _naturalearth.py  _osm.py  _utils.py
requirements/: requirements-dev.txt  requirements.txt
tests/: output_test.py
